btn fix on mobile version fz 3

--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -310,6 +310,9 @@
 .modal__title {
     font-weight: 900;
     font-size: 1.5rem;
+    @media screen and (max-width: 425px) {
+        font-size: 20px;
+    }
 }
 
 .modal__text {
